fix: extra space in code balise

--- a/docs/assets/css/utils.css
+++ b/docs/assets/css/utils.css
@@ -87,3 +87,7 @@
     text-align: right;
     font-weight: normal;
 }
+
+code {
+  display: inline-block;
+}
